{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 119,
  "lineage": "8e89a6ed-9c26-0fed-2701-451391ba5f7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:727103661911:instance/i-05404775216dcfd41",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05404775216dcfd41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02ac24e32e39aaa54",
            "private_dns": "ip-172-31-81-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.81.250",
            "public_dns": "ec2-54-174-83-99.compute-1.amazonaws.com",
            "public_ip": "54.174.83.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04be71441cccd9398",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0350bd5d69420d8a2",
            "tags": {
              "Name": "Postgresql-server",
              "env": "dev"
            },
            "tags_all": {
              "Name": "Postgresql-server",
              "env": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d39f07611826be35"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:security-group/sg-07a088733b2548322",
            "description": "Allow 22, 8080 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a088733b2548322",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins_sg20230419055723291900000002",
            "name_prefix": "jenkins_sg",
            "owner_id": "727103661911",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d7e6242967ea949d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:network-acl/acl-0b81a0b4ead8c7615",
            "default_network_acl_id": "acl-0b81a0b4ead8c7615",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b81a0b4ead8c7615",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "727103661911",
            "subnet_ids": [
              "subnet-08e7833c4c9698cef",
              "subnet-0e1065acd05460ea0",
              "subnet-0e72052089d2222ab",
              "subnet-0f4c8256b74550bae"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d7e6242967ea949d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:route-table/rtb-0370d5edde08017fb",
            "default_route_table_id": "rtb-0370d5edde08017fb",
            "id": "rtb-0370d5edde08017fb",
            "owner_id": "727103661911",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d7e6242967ea949d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:security-group/sg-057e89f7cf6464628",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-057e89f7cf6464628",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "727103661911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d7e6242967ea949d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d18d67e66e11839",
            "domain": "vpc",
            "id": "eipalloc-09d18d67e66e11839",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-204-235-39.compute-1.amazonaws.com",
            "public_ip": "52.204.235.39",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:internet-gateway/igw-0e1f629e0c2ec217e",
            "id": "igw-0e1f629e0c2ec217e",
            "owner_id": "727103661911",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d7e6242967ea949d"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d18d67e66e11839",
            "connectivity_type": "public",
            "id": "nat-027e5bd1d7666555d",
            "network_interface_id": "eni-0e96cc4e1dd4b3679",
            "private_ip": "10.0.101.89",
            "public_ip": "52.204.235.39",
            "subnet_id": "subnet-08e7833c4c9698cef",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc-jenkins.aws_eip.nat",
            "module.vpc-jenkins.aws_internet_gateway.this",
            "module.vpc-jenkins.aws_subnet.public",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a7740749063dba521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-027e5bd1d7666555d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a7740749063dba52",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_eip.nat",
            "module.vpc-jenkins.aws_internet_gateway.this",
            "module.vpc-jenkins.aws_nat_gateway.this",
            "module.vpc-jenkins.aws_route_table.private",
            "module.vpc-jenkins.aws_subnet.public",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e1f629e0c2ec217e",
            "id": "r-rtb-0e3759c1bc5b18b8a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3759c1bc5b18b8a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_internet_gateway.this",
            "module.vpc-jenkins.aws_route_table.public",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:route-table/rtb-0a7740749063dba52",
            "id": "rtb-0a7740749063dba52",
            "owner_id": "727103661911",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7e6242967ea949d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:route-table/rtb-0e3759c1bc5b18b8a",
            "id": "rtb-0e3759c1bc5b18b8a",
            "owner_id": "727103661911",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7e6242967ea949d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0242878431585dae4",
            "route_table_id": "rtb-0a7740749063dba52",
            "subnet_id": "subnet-0f4c8256b74550bae"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_route_table.private",
            "module.vpc-jenkins.aws_subnet.private",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ee44e9454c998a8",
            "route_table_id": "rtb-0a7740749063dba52",
            "subnet_id": "subnet-0e72052089d2222ab"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_route_table.private",
            "module.vpc-jenkins.aws_subnet.private",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034a8aedeacbeb5c7",
            "route_table_id": "rtb-0e3759c1bc5b18b8a",
            "subnet_id": "subnet-08e7833c4c9698cef"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_route_table.public",
            "module.vpc-jenkins.aws_subnet.public",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0622d7d9356772944",
            "route_table_id": "rtb-0e3759c1bc5b18b8a",
            "subnet_id": "subnet-0e1065acd05460ea0"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_route_table.public",
            "module.vpc-jenkins.aws_subnet.public",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:subnet/subnet-0f4c8256b74550bae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4c8256b74550bae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727103661911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d7e6242967ea949d"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:subnet/subnet-0e72052089d2222ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e72052089d2222ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727103661911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d7e6242967ea949d"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:subnet/subnet-08e7833c4c9698cef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e7833c4c9698cef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727103661911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d7e6242967ea949d"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:subnet/subnet-0e1065acd05460ea0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1065acd05460ea0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727103661911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d7e6242967ea949d"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727103661911:vpc/vpc-0d7e6242967ea949d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b81a0b4ead8c7615",
            "default_route_table_id": "rtb-0370d5edde08017fb",
            "default_security_group_id": "sg-057e89f7cf6464628",
            "dhcp_options_id": "dopt-029b46617f5d5045d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d7e6242967ea949d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0370d5edde08017fb",
            "owner_id": "727103661911",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}